# pretix-googlepaypasses

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
pretix_googlepaypasses/: __init__.py  apps.py  forms.py  googlepaypasses.py  helpers.py  passbook.py  signals.py  tasks.py  urls.py  views.py
pretix_googlepaypasses/locale/: django.po
pretix_googlepaypasses/locale/de/LC_MESSAGES/: djangojs.po
pretix_googlepaypasses/locale/de_Informal/LC_MESSAGES/: django.po  djangojs.po
pretix_googlepaypasses/management/commands/: googlepaypasses_classes.py  googlepaypasses_objects.py
pretix_googlepaypasses/static/pretix_googlepaypasses/: button.js  geosuggest.js
pretix_googlepaypasses/static/pretix_googlepaypasses/js/: button.js
pretix_googlepaypasses/static/pretix_googlepaypasses/scss/: pretix_googlepaypasses.scss
pretix_googlepaypasses/templates/pretix_googlepaypasses/: action_evenTicketClassFail.html  action_evenTicketObjectFail.html  downloadfallback.html  form.html  presale_head.html  preview.html
pretix_googlepaypasses/templates/pretix_googlepaypasses/email/: base.html  notification.html
